<resources>
    <string name="app_name">Taller2Carros</string>
    <string name="action_settings">Settings</string>
    <string name="registrarCarros">Registrar Carros</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="color">Color</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="precio">Precio</string>
    <string name="placa">Placa</string>
    <string name="audi">Audi</string>
    <string name="bmw">Bmw</string>
    <string name="buggati">Buggati</string>
    <string name="ferrari">Ferrari</string>
    <string name="nissan">Nissan</string>
    <string name="amarillo">Amarillo</string>
    <string name="rojo">Rojo</string>
    <string name="azul">Azul</string>
    <string name="registrar">Registrar</string>
    <string name="listar">Listar</string>
    <string name="reportar">Informes</string>
    <string name="errorTitulo">Notificación</string>
    <string name="mensaje_guardado">Carro guardado correctamente</string>
    <string name="error1">Los 3 primeros caracteres de la placa deben ser letras</string>
    <string name="error2">Los 3 últimos caracteres de la placa deben ser números</string>
    <string name="error3">El campo placa no puede estar vacío</string>
    <string name="error4">El campo placa debe contener 6 caracteres</string>
    <string-array name="lstOpciones">
        <item>@string/registrar</item>
        <item>@string/listar</item>
        <item>@string/reportar</item>
    </string-array>
    <string-array name="modelo_spinner">
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
    </string-array>
    <string-array name="color_spinner">
        <item>@string/amarillo</item>
        <item>@string/rojo</item>
        <item>@string/azul</item>
    </string-array>
    <string-array name="marca_spinner">
        <item>@string/audi</item>
        <item>@string/bmw</item>
        <item>@string/buggati</item>
        <item>@string/ferrari</item>
        <item>@string/nissan</item>
    </string-array>

</resources>
